--- a/SocialMediaFreelas.App/Pages/Login/Cliente/Index.cshtml
+++ b/SocialMediaFreelas.App/Pages/Login/Cliente/Index.cshtml
@@ -130,6 +130,7 @@
         </div>
         <div class="form-group">
             <a href="../Register" class="btn btn-block create-account-link">Cadastre-se</a>
+            <a type="button" asp-page="../../Index" style="border-radius:30px" class="btn btn-block btn-outline-dark">Voltar</a>
         </div>
     </form>
     </div>
