--- a/SocialMediaFreelas.App/Pages/Register/Index.cshtml
+++ b/SocialMediaFreelas.App/Pages/Register/Index.cshtml
@@ -201,7 +201,7 @@ html, body {
         </div>
         <div class="form-group">
             <input type="submit" value="Registrar" class="btn btn-block create-account">
-            <a type="button" asp-page="../Index" class="btn btn-block create-account">Voltar</a>
+            <a type="button" asp-page="../../Index" class="btn btn-block create-account">Voltar</a>
         </div>
     </form>
 </div>
