--- a/SocialMediaFreelas.App/Pages/Vagas/Details.cshtml
+++ b/SocialMediaFreelas.App/Pages/Vagas/Details.cshtml
@@ -27,6 +27,8 @@
       <p><strong>Cargo:</strong> @Model.VagaViewModel.Cargo</p>
       <p><strong>Localização:</strong> @Model.VagaViewModel.Localizacao</p>
       <p><strong>Tipo da Vaga:</strong>@Model.VagaViewModel.Tipo</p>
+      <a class="btn btn-outline-info" asp-page="./Edit" asp-route-id="@Model.VagaViewModel.Id">Editar</a>
+      <a class="btn btn-outline-danger" asp-page="./Delete" asp-route-id="@Model.VagaViewModel.Id">Excluir</a>
     </div>
 
     <!-- Lista de Candidatos -->
@@ -41,92 +43,16 @@
                         <h5 class="card-title">@candidato.Nome</h5>
                         <p class="card-text">@candidato.Sobre</p>
                         <a role="button" class="btn btn-outline-primary" asp-page="../Freelancers/Details" asp-route-id="@candidato.Id">Perfil</a>
-                        <button role="button" class="btn btn-success">Whatsapp</button>
+                         @{
+                            var telefoneFormated = "55" + candidato.Telefone;
+                          }
+                        <a href="https://wa.me/@telefoneFormated" class="btn btn-success">Whatsapp</a>
                       </div>
                     </div>
                   </div>
                 }
             }
             
-      <!-- Card do Candidato -->
-      
-      <!-- Repita os cards para outros candidatos -->
-
-
     </div>
   </div>
 </div>
-
-@*<h1>Details</h1>
-
-<h4>Vaga</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form>
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-            <input type="hidden" asp-for="VagaViewModel.Id"/>
-
-            <div class="form-group">
-                <label asp-for="VagaViewModel.ClienteId" class="control-label"></label>
-                <input asp-for="VagaViewModel.ClienteId" class="form-control" disabled />
-            </div>
-
-            <div class="form-group">
-                <label asp-for="VagaViewModel.Titulo" class="control-label"></label>
-                <input asp-for="VagaViewModel.Titulo" class="form-control" disabled />
-            </div>
-
-            <div class="form-group">
-                <label asp-for="VagaViewModel.Descricao" class="control-label"></label>
-                <input asp-for="VagaViewModel.Descricao" class="form-control" disabled />
-            </div>
-
-            <div class="form-group">
-                <label asp-for="VagaViewModel.Cargo" class="control-label"></label>
-                <input asp-for="VagaViewModel.Cargo" class="form-control" disabled />
-            </div>
-
-            <div class="form-group">
-                <label asp-for="VagaViewModel.Tipo" class="control-label"></label>
-                <input asp-for="VagaViewModel.Tipo" class="form-control" disabled />
-            </div>
-
-            <div class="form-group">
-                <label asp-for="VagaViewModel.Localizacao" class="control-label"></label>
-                <input asp-for="VagaViewModel.Localizacao" class="form-control" disabled />
-            </div>
-
-            <div class="form-group">
-                <label asp-for="VagaViewModel.Status" class="control-label"></label>
-                <input asp-for="VagaViewModel.Status" class="form-control" disabled />
-            </div>
-
-            <div class="form-group">
-                <label asp-for="VagaViewModel.Remuneracao" class="control-label"></label>
-                <input asp-for="VagaViewModel.Remuneracao" class="form-control" disabled />
-            </div>
-
-        </form>
-    </div>
-</div>
-
-<div>
-    <form method="post">
-    <div class="form-group">
-        <input type="hidden" asp-for="VagaViewModel.Id" />
-        <input type="hidden" asp-for="VagaViewModel.UserId" />
-        <input type="submit" value="Candidatar-se" class="btn btn-primary" />
-    </div>
-    </form>
-
-    <a asp-page="Index">Back to List</a>
-</div>
-
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-}
-*@
