Finalizado mensagens de sucesso

--- a/SocialMediaFreelas.App/Pages/Clientes/Details.cshtml
+++ b/SocialMediaFreelas.App/Pages/Clientes/Details.cshtml
@@ -136,7 +136,7 @@
                         }
                         else
                         {
-                            <td style="font-weight:bold;"><a asp-page="../Vagas/Details" asp-route-id="@vaga.Id">Ver mais</a></td>
+                            <td style="font-weight:bold;"><a asp-page="../Vagas/DetailsByFreelancer" asp-route-id="@vaga.Id">Ver mais</a></td>
                         }
 
                     </tr>
