corrige index vagas by user

--- a/SocialMediaFreelas.App/Pages/Vagas/IndexByUser.cshtml
+++ b/SocialMediaFreelas.App/Pages/Vagas/IndexByUser.cshtml
@@ -17,6 +17,10 @@
         position: relative; /* Posiciona relativo ao seu local normal */
         z-index: 2; /* Coloca a mensagem na frente do fundo */
     }
+
+    #footer {
+        display:none;
+    }
 </style>
 
 
